[package]
name = "uni_ex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.4" }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", features = [] }
time = { version = "0.3.29", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "fs", "process"] }
tokio-util = { version = "0.6", features = ["io", "codec"] }
axum = { version = "0.6.20", features = ["json", "http2", "headers"] }
fantoccini = { version = "0.19.3", features = ["rustls-tls"] }

toml = { version = "0.8.2", features = [] }
tower = { version = "0.4.13", features = ["timeout", "util"] }
tower-http = { version = "0.4.4", features = ["trace", "cors", "request-id", "trace", "compression-gzip", "util"] }
tracing = { version =  "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
anyhow = { version = "1.0.75", features = ["backtrace"] }
percent-encoding = { version = "2.3.0" }
bytes = { version = "1.5.0", features = ["serde"] }
base64 = "0.21.5"
futures = "0.3.28"
image = "0.24.7"
